add cart, change logs