@@ -25,7 +25,6 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -49,7 +48,8 @@ public class AuthServiceImpl implements AuthService {
         this.encoder = encoder;
     }
 
-    public LoginResponse authenticateUser(LoginDTO loginDTO) {
+    public LoginResponse login(LoginDTO loginDTO) {
+        log.debug("Attempting login for user: {}", loginDTO.getUsername());
         try {
             Authentication authentication = authenticationManager
                     .authenticate(new UsernamePasswordAuthenticationToken(loginDTO.getUsername(), loginDTO.getPassword()));
@@ -61,18 +61,23 @@ public class AuthServiceImpl implements AuthService {
                     .map(GrantedAuthority::getAuthority)
                     .toList();
 
+            log.debug("User {} logged in successfully", loginDTO.getUsername());
             return new LoginResponse(userDetails, roles);
         } catch (AuthenticationException e) {
+            log.warn("Authentication failed for user: {} - Reason: {}", loginDTO.getUsername(), e.getMessage());
             throw new AuthenticationFailedException("Nieprawidłowe dane logowania");
         }
     }
 
     public User registerUser(SignUpDTO signUpDTO) {
+        log.debug("Registering new user: {}", signUpDTO.getUsername());
         if (userRepository.existsByUserName(signUpDTO.getUsername())) {
+            log.debug("Username [{}] is already taken!", signUpDTO.getUsername());
             throw new UserAlreadyExistsException("Username is already taken!");
         }
 
         if (userRepository.existsByEmail(signUpDTO.getEmail())) {
+            log.debug("Email [{}] is already in use!", signUpDTO.getEmail());
             throw new UserAlreadyExistsException("Email is already in use!");
         }
 
@@ -86,39 +91,57 @@ public class AuthServiceImpl implements AuthService {
         Set<Role> roles = assignRoles(strRoles);
 
         user.setRoles(roles);
-        return userRepository.save(user);
+        User savedUser = userRepository.save(user);
+        log.info("User [{}] registered successfully", signUpDTO.getUsername());
+        return savedUser;
     }
 
     @Override
     public LoginResponse getUserDetails(Authentication authentication) {
+        log.debug("Fetching user details");
         UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
                 .toList();
+        log.debug("User details fetched successfully");
         return new LoginResponse(userDetails, roles);
     }
 
     @Override
     public ResponseCookie getCleanJwtCookie() {
+        log.debug("Generating clean JWT cookie");
         return jwtUtils.getCleanJwtCookie();
     }
 
     private Set<Role> assignRoles(Set<String> strRoles) {
+        log.debug("Assigning roles");
         if (strRoles == null || strRoles.isEmpty()) {
-            return Collections.singleton(roleRepository.findByRoleName(AppRole.ROLE_USER)
-                    .orElseThrow(() -> new ResourceNotFoundException("Role", "name", AppRole.ROLE_USER.toString())));
+            log.debug("No roles specified, assigning default ROLE_USER");
+            return Set.of(roleRepository.findByRoleName(AppRole.ROLE_USER)
+                    .orElseThrow(() -> {
+                        log.error("Role [{}] not found", AppRole.ROLE_USER);
+                        return new ResourceNotFoundException("Role", "name", AppRole.ROLE_USER.toString());
+                    }));
         }
 
-        return strRoles.stream()
+        Set<Role> roles = strRoles.stream()
                 .map(AppRole::fromString)
-                .map(appRole -> roleRepository.findByRoleName(appRole)
-                        .orElseThrow(() -> new ResourceNotFoundException("Role", "name", appRole.toString())))
+                .map(appRole -> {
+                    log.debug("Assigning role: {}", appRole);
+                    return roleRepository.findByRoleName(appRole)
+                            .orElseThrow(() -> {
+                                log.error("Role [{}] not found", appRole);
+                                return new ResourceNotFoundException("Role", "name", appRole.toString());
+                            });
+                })
                 .collect(Collectors.toSet());
+        log.debug("Roles assigned successfully");
+        return roles;
     }
-
 
     @Override
     public ResponseCookie generateCookie(UserDetailsImpl userDetails) {
+        log.debug("Generating JWT cookie for user: {}", userDetails.getUsername());
         return jwtUtils.generateJwtCookie(userDetails);
     }
 }
